--- a/config/portforward.yaml
+++ b/config/portforward.yaml
@@ -2,6 +2,9 @@
 key: "dev_key"
 username: "xiaoyu"
 mapping:
-  10000: "192.168.122.53" # spark master
-  10001: "192.168.122.108" # node
-
+  10000: "192.168.122.190" # spark master
+  10001: "192.168.122.179" # node 1
+  10002: "192.168.122.213" # node 2
+  10003: "192.168.122.166" # node 3
+  10004: "192.168.122.98"  # node 4
+  
