--- a/config/portforward.yaml
+++ b/config/portforward.yaml
@@ -1,10 +1,20 @@
 ---
 key: "dev_key"
 username: "xiaoyu"
+grafana: 
+  ip: "192.168.122.3"
+# Influx database address for collectd
+influxdb:
+  ip: "192.168.122.3"
+  port: 25826
+  config: "influxdb.conf.template" # InfluxDB configuration template, influxdb.port will be replaced into this template
+collectd: 
+  config: "collectd.conf.template" # Collectd configuration template, influxdb ip & port will be replaced into this template
 mapping:
   10000: "192.168.122.190" # spark master
   10001: "192.168.122.179" # node 1
   10002: "192.168.122.213" # node 2
   10003: "192.168.122.166" # node 3
   10004: "192.168.122.98"  # node 4
-  
+  11000: "192.168.122.3"   # influxdb + grafana
+
