Update cpu collectd configuration

--- a/config/collectd.conf.template
+++ b/config/collectd.conf.template
@@ -236,8 +236,8 @@ LoadPlugin swap
 #</Plugin>
 
 <Plugin cpu>
-	ReportByCpu true
-	ReportByState true
+	ReportByCpu false
+	ReportByState false
 	ValuesPercentage true
 </Plugin>
 
