Reset collectd template

--- a/config/collectd.conf.template
+++ b/config/collectd.conf.template
@@ -236,8 +236,8 @@ LoadPlugin swap
 #</Plugin>
 
 <Plugin cpu>
-	ReportByCpu false
-	ReportByState false
+	ReportByCpu true
+	ReportByState true
 	ValuesPercentage true
 </Plugin>
 
