Update collectd report by state

--- a/config/collectd.conf.template
+++ b/config/collectd.conf.template
@@ -237,7 +237,7 @@ LoadPlugin swap
 
 <Plugin cpu>
 	ReportByCpu true
-	ReportByState true
+	ReportByState false
 	ValuesPercentage true
 </Plugin>
 
