Add 4 more nodes

--- a/config/portforward.yaml
+++ b/config/portforward.yaml
@@ -17,5 +17,9 @@ mapping:
   10002: "192.168.122.213" # node 2
   10003: "192.168.122.166" # node 3
   10004: "192.168.122.98"  # node 4
+  10005: "192.168.122.134" # node 5
+  10006: "192.168.122.61"  # node 6
+  10007: "192.168.122.67"  # node 7
+  10008: "192.168.122.108" # node 8
   11000: "192.168.122.3"   # influxdb + grafana
 
