--- a/config/collectd.conf.template
+++ b/config/collectd.conf.template
@@ -122,7 +122,7 @@ LoadPlugin disk
 #LoadPlugin gps
 #LoadPlugin hugepages
 #LoadPlugin hddtemp
-#LoadPlugin interface
+LoadPlugin interface
 #LoadPlugin ipc
 #LoadPlugin ipmi
 #LoadPlugin iptables
